FOF 3.1.1
================================================================================
+ Controller mixins
+ Model mixins
+ @plural() Blade statement to support JText::plural()

FOF 3.1.0
================================================================================
! Joomla! 3.7 has a broken System - Page Cache plugin which leads to white pages
+ Abstraction of session get/set variables in the Platform
+ You can add external CSS and JS files through the View and Template packages

Backwards compatibility and migration notes:

* PHP 5.3 no longer supported. The minimum supported version of PHP is now 5.4.0. Some features may require PHP 5.5+.
* If you use a custom Platform class which doesn't extend FOF30\Platform\Joomla\Platform you will need to implement the
  new methods from the PlatformInterface. This is a potential b/c break. We're willing to take the bet and not call this
  FOF 4.0 since we've not yet heard of anyone using their custom platform. This is not exactly SemVer but hey, it's not
  like Joomla! itself offers SemVer...
* Template::route will now only merge parameters if you either pass a second boolean argument OR if your URL does not
  have either option or one of view, task query string parameters in it. Check your code in case you do something like
  $container->template->route('index.php?option=com_foobar&task=baz') as this bad practice is no longer going to work.
* Using the $container->session is deprecated. You can get/set session variables through the getSessionVar/setSessionVar
  methods of the Platform object ($container->platform).
* Using plain session tokens is deprecated. Use form tokens. You can get one with $container->platform->getToken(true).
* Tokens must be used in forms with the token as the variable name and a value of 1. Using the variable name _token
  with the token as the value is deprecated.

Tip: All deprecated practices are logged in Joomla's deprecated log file.

FOF 3.0.21