@@ -3,6 +3,7 @@ FOF 3.1.1
 + Controller mixins
 + Model mixins
 + @plural() Blade statement to support JText::plural()
++ @jlayout() Blade statement to load and render JLayout view templates
 
 FOF 3.1.0
 ================================================================================
